--- a/ArquitecturaVersion1/public/inicioCliente.html
+++ b/ArquitecturaVersion1/public/inicioCliente.html
@@ -9,14 +9,27 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="wrapper"> 
-      <!-- * * * * * * * * * * * en este div es en el que tienen que trabajar * * * * * * * * * * * * * * * -->
-      <h1><span>Nuevo</span>tiquete</h1>
-
+    <div>
+      <main>
+      <!-- * * * * * * * * * * * en este div es en el que tienen que trabajar * * * * * * * * * * * * * * * 
+      <h1><span>Inicio de</span>sesion</h1> -->
+      <div class="wrapper">
+          <h1 class="CenfotecSoftwareHouse"><span>Cenfotec</span>Software House</h1>
+                <form id="FormularioCliente">               
+                    <input type="text" placeholder="Correo Electronico" id="txtCorreoInicio">
+                    <input type="String" placeholder="Contraseña" id="txtContrasennaInicio">
+                    <button type="button" id="btnInicioSesion"><a href="principalCliente"></a>Iniciar Sesion</button>
+                    <!--<button type="button" id="btnIngresar"><a href="principalCliente.html" target="iframe_a">Ingresar <i class="fas fa-sign-in-alt"></i></a></button>-->
+                </form>
+                <a class="botonolvidarcontrasenna" href="/accounts/password/reset/">¿Olvidaste tu contraseña?</a>
+              
+        </div>
+    </main>
     </div>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.0.5/sweetalert2.all.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>-->
+
 
     <script src="js/jquery-3.3.1.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script>
@@ -24,5 +37,3 @@
     <script src="js/controladorCliente.js"></script>
   </body>
 </html>
-
-  
