--- a/ArquitecturaVersion1/public/registrocliente.html
+++ b/ArquitecturaVersion1/public/registrocliente.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">    
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UFT-8">    
+        <title>Document</title>
+        <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous"> 
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">-->
         <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="wrapper"> 
         <main>
+            <div>
+                <a class="" href="index.html">
+                <img src="img/CSHLogo.png" alt="Cenfotec Software House Logo">
+                </a>
+            </div>
+
             <form id="FormularioCliente">               
                 <input type="text" placeholder="Nombre de la empresa" id="txtNombre">
                 <input type="number" placeholder="Cedula Juridica" id="txtCedula">
@@ -24,7 +31,7 @@
                 <input type="text" placeholder="Correo de contacto" id="txtCorreo">
                 <button type="button" id="btnRegistrarCliente">Registrar</button>
             </form>
-            <table id="tblCliente">
+            <!--<table id="tblCliente">
                 <thead>
                     <th>Nombre</th>
                     <th>Cedula Juridica</th>
@@ -40,16 +47,23 @@
                 <tbody>
                     
                 </tbody>
-            </table>
+            </table>-->
         </main>
     </div> 
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.0.5/sweetalert2.js"></script>-->
+    
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.0.5/sweetalert2.js"></script>
     <script src="js/servicioCliente.js"></script>
     <script src="js/controladorCliente.js"></script>  
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script>
     <script src="js/jquery-3.3.1.js"></script> 
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script> <!--integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
-    </script>-->
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>-->
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script> integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>-->
+
+
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script>
+    <script src="js/servicioCliente.js"></script>
+    <script src="js/controladorCliente.js"></script>
   </body>
 </html>
