--- a/ArquitecturaVersion1/public/tiquetecliente.html
+++ b/ArquitecturaVersion1/public/tiquetecliente.html
@@ -10,8 +10,30 @@
   </head>
   <body>
     <div class="wrapper"> 
+        <div>
+            <a class="" href="index.html">
+            <img src="img/CSHLogo.png" alt="Cenfotec Software House Logo">
+            </a>
+        </div>
       <!-- * * * * * * * * * * * en este div es en el que tienen que trabajar * * * * * * * * * * * * * * * -->
-      <h1><span>Nuevo</span>tiquete</h1>
+      <div><h1>Tiquetes</h1></div>
+      <table id="tblCliente">
+          <thead>
+              <th>Tiquete ID</th>
+              <th>Creacion</th>
+              <th>Contenido</th>
+              <th>Correo de contacto</th>
+          </thead>
+          <tbody>
+
+          </tbody>
+      </table>
+
+
+
+      <button type="button" id="btnRegistrarCliente">Nuevo Tiquete</button>
+
+     
 
     </div>
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.0.5/sweetalert2.all.js"></script>
