--- a/ArquitecturaVersion1/public/listarCliente.html
+++ b/ArquitecturaVersion1/public/listarCliente.html
@@ -1,59 +1,44 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UFT-8">    
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+<html lang="es">
+    <head>
+        <meta charset="UFT-8">    
+        <title>Document</title>
+        <!--<link rel="stylesheet" href="css/style.css">-->
+        <link rel="stylesheet" href="css/listar.css">
   </head>
   <body>
     <div class="wrapper"> 
       <!-- * * * * * * * * * * * en este div es en el que tienen que trabajar * * * * * * * * * * * * * * * -->
-      <!--<h1><span>INGRESE</span>AQUÍ</h1>-->
-      <input type="text" id="barraBuscar" onkeyup="myFunction()" placeholder="Buscar..">
+      <h1>Listar clientes</h1>
+      <input type="text" id="tblCliente" onkeyup="myFunction()" placeholder="Busqueda">
+      <table id="tblCliente">
+          <thead id='tblhead'>   
+        <tr class="header">
+          <th style="width:20%;">Nombre de la Empresa</th>
+          <th style="width:20%;">Nombre de Contacto</th>
+          <th style="width:20%;">Apellido</th>
+          <th style="width:20%;">Correo Contacto</th>
+        </thead>
+        <tbody>
 
-<table id="myTable">
-  <tr class="header">
-    <th style="width:30%;">Nombre de la Empresa</th>
-    <th style="width:30%;">Nombre de Contacto</th>
-    <th style="width:30%;">Apellido</th>
-    <th style="width:30%;">Correo Contacto</th>
-  </tr>
-  <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Germany</td>
-    <td>hola</td>
-    <td>hola</td>
-  </tr>
-  <tr>
-    <td>Berglunds snabbkop</td>
-    <td>Sweden</td>
-    <td>hola</td>
-    <td>hola</td>
-  </tr>
-  <tr>
-    <td>Island Trading</td>
-    <td>UK</td>
-    <td>hola</td>
-    <td>hola</td>
-  </tr>
-  <tr>
-    <td>Koniglich Essen</td>
-    <td>Germany</td>
-    <td>hola</td>
-    <td>hola</td>
-  </tr>
-</table>
 
-    </div>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.0.5/sweetalert2.all.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        </tbody>
+      </table>
+    </div> 
+    
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/7.0.5/sweetalert2.js"></script>
+    <script src="js/servicioCliente.js"></script>
+    <script src="js/controladorCliente.js"></script>  
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script>
+    <script src="js/jquery-3.3.1.js"></script> 
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script> integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>-->
 
 
-    
-    <script src="js/jquery-3.3.1.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script>
-    <script src="js/servicioCliente.js"></script>
-    <script src="js/controladorCliente.js"></script>
+    <script src="js/servicio.js"></script>
+    <script src="js/controladorRegistro.js"></script>
   </body>
 </html>
